# AutoUSV

./: .gitignore  README.md  lidar.rviz
src/common/acado_vendor/: CHANGELOG.rst  CMakeLists.txt
src/common/acado_vendor/cmake/: acado_vendor_check_generated.cmake  acado_vendor_generate.cmake
src/common/usv_auto_cmake/: CMakeLists.txt  package.xml  usv_auto_cmake-extras.cmake
src/common/usv_auto_cmake/cmake/: usv_auto_cmake.cmake
src/common/usv_geometry/: CMakeLists.txt  package.xml
src/common/usv_geometry/include/geometry/: bounding_box_2d.hpp  common_2d.hpp  common_3d.hpp  convex_hull.hpp  hull_pockets.hpp  intersection.hpp  interval.hpp  lookup_table.hpp  spatial_hash.hpp  spatial_hash_config.hpp
src/common/usv_geometry/src/: bounding_box.cpp  spatial_hash.cpp
src/common/usv_geometry/test/include/: test_bounding_box.hpp  test_spatial_hash.hpp
src/common/usv_geometry/test/src/: lookup_table.cpp  test_area.cpp  test_common_2d.cpp  test_convex_hull.cpp  test_hull_pockets.cpp  test_intersection.cpp  test_interval.cpp
src/common/usv_tf2/: .clang-format  CMakeLists.txt  package.xml
src/common/usv_tf2/design/: autoware-auto-tf2-design.md
src/common/usv_tf2/include/usv_tf2/: tf2_usv_msgs.hpp
src/common/usv_tf2/test/: test_tf2_usv_msgs.cpp
src/control/nmhe_estimator/: CMakeLists.txt  package.xml
src/control/nmhe_estimator/include/nmhe_estimator/: config.hpp  nmhe_estimator.hpp  visibility_control.hpp
src/control/nmhe_estimator/scripts/: acados_ocp.json  export_mhe_ode_model_with_noisy_param.py  export_mhe_solver_with_param.py  export_ocp_solver.py  minimal_example_mhe_with_noisy_param.py  model.py  utils.py
src/control/nmhe_estimator/scripts/c_generated_code/: Makefile  acados_sim_solver_autousv.c  acados_sim_solver_autousv.h  acados_sim_solver_mhe_autousv_ode_with_noisy_param.c  acados_sim_solver_mhe_autousv_ode_with_noisy_param.h  acados_solver_autousv.c  acados_solver_autousv.h  acados_solver_mhe_autousv_ode_with_noisy_param.c  acados_solver_mhe_autousv_ode_with_noisy_param.h  acados_solver_sfunction_autousv.c  acados_solver_sfunction_mhe_autousv_ode_with_noisy_param.c  main_autousv.c  main_mhe_autousv_ode_with_noisy_param.c  main_sim_autousv.c  main_sim_mhe_autousv_ode_with_noisy_param.c  make_sfun_autousv.m  make_sfun_mhe_autousv_ode_with_noisy_param.m
src/control/nmhe_estimator/src/nmhe_estimator/: config.cpp  nmhe_estimator.cpp  references.cpp
src/control/nmhe_estimator_node/: CMakeLists.txt  package.xml
src/control/nmhe_estimator_node/include/nmhe_estimator_node/: nmhe_estimator_node.hpp  visibility_control.hpp
src/control/nmhe_estimator_node/src/: nmhe_estimator_main.cpp  nmhe_estimator_node.cpp
src/control/nmpc_controller/: CMakeLists.txt  package.xml
src/control/nmpc_controller/include/nmpc_controller/: config.hpp  nmpc_controller.hpp  visibility_control.hpp
src/control/nmpc_controller/scripts/: acados_ocp_autousv.json  minimal_closed_loop.py  model.py  utils.py
src/control/nmpc_controller/scripts/c_generated_code/: Makefile  acados_sim_solver_autousv.c  acados_sim_solver_autousv.h  acados_solver_autousv.c  acados_solver_autousv.h  acados_solver_sfunction_autousv.c  main_autousv.c  main_sim_autousv.c  make_sfun_autousv.m
src/control/nmpc_controller/test/: gtest_main.cpp  sanity_checks.cpp
src/control/nmpc_controller_nodes/: CMakeLists.txt  package.xml
src/control/nmpc_controller_nodes/param/: defaults.yaml
src/control/nmpc_controller_nodes/test/: sanity_check.cpp
src/drivers/gnss/: CMakeLists.txt  package.xml
src/drivers/gnss/launch/: gnss_interface.launch.py
src/drivers/gnss/param/: gnss_interface.param.yaml
src/drivers/gnss/src/: geo_pos_conv.cpp  gnss_interface.cpp  gnss_interface_main.cpp  gnss_interface_node.cpp
src/drivers/gnss/test/: gtest_main.cpp  llh_conv_test.cpp
src/drivers/joystick_interface_node/: package.xml
src/drivers/joystick_interface_node/param/: logitech_f310.default.param.yaml
src/drivers/joystick_interface_node/src/: joystick_interface_node.cpp
src/joystick/joystick_interface_node/: CMakeLists.txt  package.xml
src/joystick/joystick_interface_node/launch/: joystick_vehicle_interface_node.launch.py
src/joystick/joystick_interface_node/param/: logitech_f310.default.param.yaml
src/joystick/joystick_interface_node/src/: joystick_interface_node.cpp
src/planning/astar_planner_nodes/: CMakeLists.txt  package.xml
src/planning/astar_planner_nodes/launch/: astar_planner.launch.py
src/planning/astar_planner_nodes/param/: defaults.param.yaml
src/planning/astar_planner_nodes/test/: astar_planner.test.py
src/planning/costmap_generator/: CMakeLists.txt  package.xml
src/planning/costmap_generator/test/: test_costmap_generator.cpp
src/planning/costmap_generator_nodes/: CMakeLists.txt  package.xml
src/planning/costmap_generator_nodes/param/: defaults.param.yaml
src/planning/costmap_generator_nodes/test/: costmap_generator_node.test.py
src/test_nodes/: CMakeLists.txt  (+1 more)
src/tools/test_nodes/: CMakeLists.txt
src/tools/test_nodes/src/: gnss_test.cpp  motor_report_test.cpp
src/usv_msgs/: CMakeLists.txt  package.xml
src/usv_msgs/action/: PlanTrajectory.idl  PlannerCostmap.idl
src/usv_msgs/msg/: BoundingBox.idl  BoundingBoxArray.idl  Complex32.idl  ControlDiagnostic.idl  DetectedObject.idl  DetectedObjectKinematics.idl  DetectedObjects.idl  DiagnosticHeader.idl  EnvEstimation.idl  HighLevelControlCommand.idl  MotorReport1.idl  MotorReport2.idl  ObjectClassification.idl  PointClusters.idl  PointXYZIF.idl  Quaternion32.idl  RawControlCommand.idl  Shape.idl  StateEstimation.idl  Trajectory.idl  TrajectoryPoint.idl  VehicleControlCommand.idl  VehicleKinematicState.idl  VehicleStateCommand.idl
src/vehicle_interface/: CMakeLists.txt  package.xml
src/vehicle_interface/include/vehicle_interface/: platform_interface.hpp  vehicle_interface_node.hpp
src/vehicle_interface/launch/: vehicle_interface.launch.py
src/vehicle_interface/param/: vehicle_interface.param.yaml
src/vehicle_interface/src/: platform_interface.cpp  vehicle_interface_main.cpp  vehicle_interface_node.cpp
(+206 files in other folders)
