<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>usv_auto_cmake</name>
  <version>1.0.0</version>
  <description>Import the compiler settings</description>
  <maintainer email="todo@todo.todo">usv</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>ament_cmake_lint_cmake</buildtool_depend>

  <build_depend>ros_environment</build_depend>

  <buildtool_export_depend>ament_cmake_core</buildtool_export_depend>
  <buildtool_export_depend>ament_cmake_lint_cmake</buildtool_export_depend>
  <buildtool_export_depend>ament_cmake_copyright</buildtool_export_depend>
  <buildtool_export_depend>ament_cmake_cppcheck</buildtool_export_depend>
  <buildtool_export_depend>ament_cmake_cpplint</buildtool_export_depend>
  <buildtool_export_depend>ament_cmake_uncrustify</buildtool_export_depend>

  <test_depend>ament_cmake_lint_cmake</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
