<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>usv_geometry</name>
    <version>1.0.0</version>
    <description>Geometry related algorithms</description>
    <maintainer email="todo@todo.todo">usv</maintainer>
    <license>TODO</license>

    <buildtool_depend>ament_cmake_auto</buildtool_depend>
    <buildtool_depend>usv_auto_cmake</buildtool_depend>

    <depend>usv_msgs</depend>
    <depend>usv_common</depend>
    <depend>usv_tf2</depend>
    <depend>geometry_msgs</depend>

    <test_depend>ament_cmake_gtest</test_depend>
    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>
    <test_depend>osrf_testing_tools_cpp</test_depend>

    <export><build_type>ament_cmake</build_type></export>
</package>
