<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nmhe_estimator</name>
  <version>1.0.0</version>
  <description>NMHE estimation for online parameters recognization</description>
  <maintainer email="steepcurve@163.com">liuhao</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>usv_auto_cmake</buildtool_depend>
  
  <buildtool_export_depend>usv_auto_cmake</buildtool_export_depend>

  <depend>usv_msgs</depend>
  <depend>motion_common</depend>
  <depend>time_utils</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
