<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>nmpc_controller_nodes</name>
  <version>1.0.0</version>
  <description>
    Instantiation of nmpc_controller as a ROS 2 node
  </description>
  <maintainer email="steepcurve@163.com">liuhao</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>usv_auto_cmake</buildtool_depend>

  <build_export_depend>controller_common_nodes</build_export_depend>
  <build_export_depend>mpc_controller</build_export_depend>

  <build_depend>controller_common_nodes</build_depend>
  <build_depend>nmpc_controller</build_depend>

  <build_depend>tf2_msgs</build_depend>
  <build_depend>time_utils</build_depend>
  <build_depend>motion_testing</build_depend>
  <build_depend>motion_testing_nodes</build_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_index_python</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>autoware_testing</test_depend>

  <export><build_type>ament_cmake</build_type></export>
</package>
