<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>astar_planner_nodes</name>
  <version>1.0.0</version>
  <description>The astar_planner package</description>
  <maintainer email="steepcurve@163.com">liuhao</maintainer>
  <license>TODO</license>
  <author email="aohsato@gmail.com">Akihito OHSATO</author>
  <author email="antm678@ertl.jp">Tomohito ANDO</author>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>usv_auto_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>rclcpp_action</depend>

  <depend>astar_search</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>usv_msgs</depend>
  <depend>motion_common</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>autoware_testing</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
